--- a/CV.html
+++ b/CV.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 14px;
+            margin: 0 ;
             padding: 0;
             display: flex;
         }
 
         .sidebar {
-            background-color: ghostwhite;
+            background-color: white;
             color: black;
-            width: 250px;
+            width: 200px;
             transition: all 0.1s;
             overflow-x: hidden;
+
         }
         .fixedsidebar{
             position: fixed;
+            box-shadow: 2px 2px 50px 1px lightgray;
         }
 
         .sidebar-content {
@@ -40,9 +43,10 @@
 
         .menu-btn {
             background-color: black;
-            font-size: 24px;
+            text-align: right;
+            font-size: 30px;
             cursor: pointer;
-            color: whitesmoke;
+            color: white;
             padding: 10px;
 /*            position: fixed;*/
             top: 10px;
@@ -101,36 +105,27 @@
 </head>
 <body>
     <span class="fixedsidebar">
-    <div class="menu-btn" onclick="toggleSidebar()">&#9776;</div>
+    <div class="menu-btn" onclick="toggleSidebar()"> &#9776;</div>
     <div class="sidebar" id="sidebar">
         <div class="sidebar-content" id="sidebar-content">
             <h1>John Bernad</h1>
-            <ul>
-                <li><a href="#career">Career</a></li>
-                <li><a href="#certifications">Certifications</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contactme">Contact Me</a></li>
-
-            </ul>
+            <p>Chicago, IL</p>
+<section class="section" id="contactme">
+    <p><a style="color: black;" href="tel:+17073423998">+17073423998</a></p>
+    <p><a style="color: black;" href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></p>
+    <p><a style="color: black;" href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></p>
+    <p><a style="color: black;" href="https://github.com/johnbernad6">github.com/johnbernad6</a></p>
+</section>
         </div>
     </div>
     </span>
-    <div class="maincontent" id="maincontent">
-            
-                <iframe src="https://drive.google.com/file/d/180ka7txL7OWYodiUpduge-zsQlX01e3U/view?usp=drive_link" width="100%" height="600"></iframe>
 
 
-<section class="section" id="contactme">
-    <h2>Contact Info:</h2>
-    <p><a style="color: black;" href="tel:+17073423998">+17073423998</a></p>
-    <p><a style="color: black;" href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></p>
-    <a style="color: black;" href="https://www.linkedin.com/in/johnbernad/">LinkedIn</a>
-</section>
+<div class="maincontent" id="maincontent" style="width: 100%; text-align: center;">
+    <img src="JohnBernad.png" width="50%" style="margin: 0 auto; padding: 5%;box-shadow: 0px 1px 50px 1px lightgray;
+">
+</div>
 
-
-
-    </div>
 
     <script>
         function toggleSidebar() {
