--- a/CV.html
+++ b/CV.html
@@ -122,7 +122,7 @@
 
 
 <div class="maincontent" id="maincontent" style="width: 100%; text-align: center;">
-    <img src="JohnBernad.png" width="50%" style="margin: 0 auto; padding: 5%;box-shadow: 0px 1px 50px 1px lightgray;
+    <img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernad.png" width="50%" style="margin: 0 auto; padding: 5%;box-shadow: 0px 1px 50px 1px lightgray;
 ">
 </div>
 
