Update CV.html remove padding
removed padding

--- a/CV.html
+++ b/CV.html
@@ -34,9 +34,9 @@
 
         .maincontent {
             flex: 1;
-            padding-top: 50px;
+/*             padding-top: 50px;
             padding-left: 300px;
-            padding-bottom: 1000px;
+            padding-bottom: 1000px; */
             transition: all 0.1s;
             overflow-x: hidden;
         }
