--- a/CV.html
+++ b/CV.html
@@ -92,6 +92,7 @@
                 <a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a>
                 <a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a>
                 <a href="https://github.com/johnbernad6">github.com/johnbernad6</a>
+		<a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a>
             </div>
         </div>
     </div>
