--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -20,9 +20,9 @@
 <body>
 
 <div class="player" id="player1"></div>
-<div class="player" id="player2"></div>
-<div class="player" id="player3"></div>
-<div class="player" id="player4"></div>
+<!-- <div class="player" id="player2"></div> -->
+<!-- <div class="player" id="player3"></div> -->
+<!-- <div class="player" id="player4"></div> -->
 
 <script>
     const cards = [
