--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -99,6 +99,7 @@
 
         const playersData = roomData[0];
         const playerIds = ['player1', 'player2', 'player3', 'player4'];
+        console.log(playersData)
 
         playerIds.forEach((playerId, index) => {
             const playerData = playersData[`player${index + 1}hand`];
