--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -99,10 +99,10 @@
 
         const playersData = roomData[0];
         const playerIds = ['player1', 'player2', 'player3', 'player4'];
-        console.log(playersData[player2hand])
+        console.log(playersData['player2hand'])
 
      
-            const playerData = playersData[player2hand];
+            const playerData = playersData['player2hand'];
             const playerDiv = document.getElementById(playerId);
             if (!playerDiv) return;
 
