--- a/htmlcardgame.html
+++ b/htmlcardgame.html
@@ -21,7 +21,7 @@
 <body>
 
 <h1 id="roomID"></h1>
-<div class="player" id="player1"></div>
+<div class="player" id="playerId"></div>
 
 <script>
  const cards = [
