--- a/startgame.html
+++ b/startgame.html
@@ -217,10 +217,10 @@
         }
     }
 	    
-        if (gameID.length !== 4 || isNaN(gameID)) {
-            alert("Please enter a valid 4-digit game ID.");
-            return;
-        }
+        // if (gameID.length !== 4 || isNaN(gameID)) {
+        //     alert("Please enter a valid 4-digit game ID.");
+        //     return;
+        // }
 	//console.log(gameID)
         //alert("Join Game button clicked with game ID: " + gameID);
  // window.location.href = 'https://johnbernad6server-b837q.ondigitalocean.app/api/join-room?gameroomid=' + gameID;
