--- a/startgame.html
+++ b/startgame.html
@@ -207,15 +207,15 @@
         displayRoomID(roomData);
     }
 
-    function displayRoomID(roomData) {
-        if (!roomData || roomData.length === 0) return;
+    // function displayRoomID(roomData) {
+    //     if (!roomData || roomData.length === 0) return;
 
-        const roomID = roomData[0].gameroomid;
-        const roomIDElement = document.getElementById('roomID');
-        if (roomIDElement) {
-            roomIDElement.textContent = `ROOM ID: ${roomID}`;
-        }
-    }
+    //     const roomID = roomData[0].gameroomid;
+    //     const roomIDElement = document.getElementById('roomID');
+    //     if (roomIDElement) {
+    //         roomIDElement.textContent = `ROOM ID: ${roomID}`;
+    //     }
+    // }
 	    
         // if (gameID.length !== 4 || isNaN(gameID)) {
         //     alert("Please enter a valid 4-digit game ID.");
