--- a/startgame.html
+++ b/startgame.html
@@ -159,7 +159,7 @@
         if (!roomData || roomData.length === 0) return;
 
         const playersData = roomData[0];
-        const playerIds = ['player1', 'player2', 'player3', 'player4'];
+        const playerIds = ['player2', 'player3', 'player4'];
 
         playerIds.forEach((playerId, index) => {
             const playerData = playersData[`player${index + 1}hand`];
