--- a/startgame.html
+++ b/startgame.html
@@ -204,7 +204,7 @@
 	    
         const roomData = await fetchData('https://johnbernad6server-b837q.ondigitalocean.app/api/join-room?gameroomid=' + gameID);
         populatePlayerHands(roomData);
-        displayRoomID(roomData);
+        // displayRoomID(roomData);
     }
 
     // function displayRoomID(roomData) {
