--- a/startgame.html
+++ b/startgame.html
@@ -62,6 +62,9 @@
 
 <h1 id="roomID"></h1>
 <div class="player" id="player1"></div>
+<div class="player" id="player2"></div>
+<div class="player" id="player3"></div>
+<div class="player" id="player4"></div>
 
 <div class="container">
 
