--- a/startgame.html
+++ b/startgame.html
@@ -160,9 +160,11 @@
 
     function populatePlayerHands(roomData) {
 	    console.log(roomData);
+	    console.log(roomData.length);
         if (!roomData || roomData.length === 0) return;
 
         const playersData = roomData[0];
+	
         const playerIds = ['player2', 'player3', 'player4'];
 	index = 1;
         playerIds.forEach((playerId, index) => {
