--- a/startgame.html
+++ b/startgame.html
@@ -160,7 +160,7 @@
 
     function populatePlayerHands(roomData) {
 	    console.log(roomData);
-	    console.log(roomData.length);
+	    console.log(roomData[0].length);
         if (!roomData || roomData.length === 0) return;
 
         const playersData = roomData[0];
