--- a/startgame.html
+++ b/startgame.html
@@ -166,8 +166,15 @@
         if (!roomData || roomData.length === 0) return;
 
         const playersData = roomData[0];
-	
-        const playerIds = ['player2', 'player3', 'player4'];
+
+	if(playerHandCount == 3){const playerIds = ['player2', 'player3', 'player4'];}
+
+	if(playerHandCount == 2){const playerIds = ['player3', 'player4'];}
+
+	if(playerHandCount == 1){const playerIds = ['player4'];}
+
+	    
+
 	index = 1;
         playerIds.forEach((playerId, index) => {
             const playerData = playersData[`${playerId}hand`];
