--- a/startgame.html
+++ b/startgame.html
@@ -87,7 +87,11 @@
 
     function joinGame() {
 
-
+        // Find the container element
+        var container = document.querySelector('.container');
+        
+        // Set its display property to "none"
+        container.style.display = 'none';
 	    
  const cards = [
        { "id": 1, "name": "cardDiamonds_A" },
