--- a/startgame.html
+++ b/startgame.html
@@ -187,6 +187,8 @@
         player4.style.display = 'none';
 	} else if (playerHandCount === 2) {
 	    playerIds = ['player3', 'player4'];
+	p4 = document.getElementById('player4');
+        player4.style.display = 'none';
 	} else if (playerHandCount === 1) {
 	    playerIds = ['player4'];
 	}
