--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -9,12 +9,9 @@
     .player {
         display: flex;
     }
-    .card img {
-        width: 80%; /* Adjusted size to be 80% smaller */
-        height: auto; /* Automatically adjust height to maintain aspect ratio */
-        max-width: 100px; /* Set a maximum width to prevent excessive shrinking */    
-        border: solid 2px black;
-        border-radius:10px;
+    .card {
+        position: absolute;
+        cursor: grab;
     }
 </style>
 </head>
@@ -129,6 +126,13 @@
         img.src = imageUrl;
         img.alt = "Card";
         cardDiv.appendChild(img);
+
+        // Make card draggable
+        cardDiv.draggable = true;
+        cardDiv.addEventListener("dragstart", (event) => {
+            event.dataTransfer.setData("text/plain", imageUrl);
+        });
+
         return cardDiv;
     }
 
