--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -10,6 +10,11 @@
         display: flex;
     }
     .draggable img {
+        width: 100px;
+        height: 100px;
+        background-color: #ccc;
+        position: absolute;
+        cursor: grab;
         width: 80%; /* Adjusted size to be 80% smaller */
         height: auto; /* Automatically adjust height to maintain aspect ratio */
         max-width: 100px; /* Set a maximum width to prevent excessive shrinking */    
