--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -157,7 +157,7 @@ function createCardElement(imageUrl) {
     const cardDiv = document.createElement("div");
     cardDiv.className = "draggable";
     cardDiv.setAttribute("id", "draggable"); // Adding id attribute
-    cardDiv.setAttribute("draggable", "true"); // Adding draggable attribute
+    cardDiv.setAttribute("draggable", "false"); // Adding draggable attribute
     // cardDiv.style.cursor = "grab"; // Adding cursor style
 
     const img = document.createElement("img");
