--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -11,7 +11,7 @@
     }
     .draggable img {
        
-        position: absolute;
+/*         position: absolute; */
         cursor: grab;
         width: 80%; /* Adjusted size to be 80% smaller */
         height: auto; /* Automatically adjust height to maintain aspect ratio */
