--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -156,7 +156,7 @@
 function createCardElement(imageUrl) {
     const cardDiv = document.createElement("div");
     cardDiv.className = "draggable";
-    cardDiv.setAttribute("id", "draggable"); // Adding id attribute
+    // cardDiv.setAttribute("id", "draggable"); // Adding id attribute
 
     // cardDiv.style.cursor = "grab"; // Adding cursor style
 
