--- a/htmlcardgameAPIenabled.html
+++ b/htmlcardgameAPIenabled.html
@@ -28,31 +28,31 @@
 
 <script>
 
-  document.addEventListener('DOMContentLoaded', function () {
-  const draggables = document.querySelectorAll('.card');
+//   document.addEventListener('DOMContentLoaded', function () {
+//   const draggables = document.querySelectorAll('.card');
 
-  draggables.forEach(draggable => {
-    draggable.addEventListener('mousedown', (e) => {
-      const startX = e.clientX - draggable.getBoundingClientRect().left;
-      const startY = e.clientY - draggable.getBoundingClientRect().top;
+//   draggables.forEach(draggable => {
+//     draggable.addEventListener('mousedown', (e) => {
+//       const startX = e.clientX - draggable.getBoundingClientRect().left;
+//       const startY = e.clientY - draggable.getBoundingClientRect().top;
 
-      function onMouseMove(e) {
-        const left = e.clientX - startX;
-        const top = e.clientY - startY;
-        draggable.style.left = `${left}px`;
-        draggable.style.top = `${top}px`;
-      }
+//       function onMouseMove(e) {
+//         const left = e.clientX - startX;
+//         const top = e.clientY - startY;
+//         draggable.style.left = `${left}px`;
+//         draggable.style.top = `${top}px`;
+//       }
 
-      function onMouseUp() {
-        document.removeEventListener('mousemove', onMouseMove);
-        document.removeEventListener('mouseup', onMouseUp);
-      }
+//       function onMouseUp() {
+//         document.removeEventListener('mousemove', onMouseMove);
+//         document.removeEventListener('mouseup', onMouseUp);
+//       }
 
-      document.addEventListener('mousemove', onMouseMove);
-      document.addEventListener('mouseup', onMouseUp);
-    });
-  });
-});
+//       document.addEventListener('mousemove', onMouseMove);
+//       document.addEventListener('mouseup', onMouseUp);
+//     });
+//   });
+// });
 
     
  const cards = [
@@ -143,6 +143,31 @@
                 }
             });
         });
+         document.addEventListener('DOMContentLoaded', function () {
+  const draggables = document.querySelectorAll('.card');
+
+  draggables.forEach(draggable => {
+    draggable.addEventListener('mousedown', (e) => {
+      const startX = e.clientX - draggable.getBoundingClientRect().left;
+      const startY = e.clientY - draggable.getBoundingClientRect().top;
+
+      function onMouseMove(e) {
+        const left = e.clientX - startX;
+        const top = e.clientY - startY;
+        draggable.style.left = `${left}px`;
+        draggable.style.top = `${top}px`;
+      }
+
+      function onMouseUp() {
+        document.removeEventListener('mousemove', onMouseMove);
+        document.removeEventListener('mouseup', onMouseUp);
+      }
+
+      document.addEventListener('mousemove', onMouseMove);
+      document.addEventListener('mouseup', onMouseUp);
+    });
+  });
+});
     }
 
     function getCardImageUrl(cardId) {
